sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:10: error: type mismatch;
 found   : Int
 required: ?{def /(x$1: ? >: Double(1.3)): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def /(x$1: ? >: Double(1.3)): ?}
      ecart /=1.3
      ^AlgCombSort:10: error: overloaded method value / with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
      ecart /=1.3
            ^AlgCombSort:17: error: Boolean does not take parameters
      if (plusPetit(i , i+ecart)() == false) {
                                ^AlgCombSort:19: error: Unit does not take parameters
        echange(i, i+ecart)()
                           ^AlgCombSort:21: error: not found: value a
        a = 1
        ^AlgCombSort:26: error: not found: value a
  } while ( ecart > 1 || a == 1)
                         ^